# rubband

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release-builds.yml
doc/: production-plan.md
docs/: api.md  building.md  index.md  release.md
install/: pyinstaller_entrypoint.py
rubband/: THIRD_PARTY_NOTICES.md  __init__.py  _native.py  _rubband.cpp  _rubband.pyi
scripts/: release.sh  smoke_wheel.py
src/rubband/: __init__.py  _native.py  _rubband.cpp  _rubband.pyi
tests/: conftest.py  test_api.py  test_native.py  test_packaging.py
