[project]
name = "rubband"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Ritchford", email = "tom@swirly.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
]

[project.scripts]
rubband = "rubband:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-regressions>=2.11.0",
    "pyupgrade>=3.21.2",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
