[project]
name = "rubband"
version = "0.1.0"
description = "Python bindings for Rubber Band audio pitch shifting and time stretching"
readme = "README.md"
license = "LGPL-2.1-only"
authors = [
    { name = "Tom Ritchford", email = "tom@swirly.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.scripts]
rubband = "rubband:main"

[build-system]
requires = ["scikit-build-core>=0.11.6", "nanobind>=2.9.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["rubband"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pytest>=9.1.1",
    "pytest-regressions>=2.11.0",
    "pyupgrade>=3.21.2",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
